using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant{
	public static string PISTOL = "Pistol";
	public static string ZOMBIE_ANIM_WALKING = "isWalking";
	public static string ZOMBIE_ANIM_ATTACKING = "isAttacking";
	public static string ZOMBIE_ANIM_DEAD = "isDead";
	public static string ZOMBIE_ANIM_IDLE = "isIdle";
	public static string SUMMON_ANIM_DELAY = "summonDelay";

	public static string TAG_BULLET = "Bullet";
	public static string TAG_SKELETON_SWORD = "Skeleton_Sword";
	public static string TAG_ZOMBIE_BULLET = "Zombie_Bullet";
	public static string TAG_WIZARD_BULLET = "Wizard_Bullet";
	public static string TAG_SUMMON_SWORD = "Summon_Sword";
	public static string TAG_PLAYER = "Player";
}
